// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TooltipContent have correct structure with just title 1`] = `
<div>
  <div
    class="tooltipContent"
  >
    <span
      class="tooltipContentTitleContainer"
    >
      <span
        class="tooltipContentTitle"
      >
        Title
      </span>
    </span>
  </div>
</div>
`;

exports[`TooltipContent have correct structure with title and emoji 1`] = `
<div>
  <div
    class="tooltipContent"
  >
    <span
      class="tooltipContentTitleContainer"
    >
      <span
        class="tooltipContentEmoji"
      >
        <span
          aria-label=":smile:"
          class="emoticon"
          data-emoticon="smile"
          style="display: inline-flex; align-items: center; justify-content: center; height: 28px; width: 28px; max-height: 28px; max-width: 28px; min-height: 28px; min-width: 28px; overflow: hidden;"
        >
          <img
            alt=":smile:"
            height="28"
            src="/static/emoji/1f604.png"
            style="object-fit: contain;"
            width="28"
          />
        </span>
      </span>
      <span
        class="tooltipContentTitle"
      >
        Title with Emoji
      </span>
    </span>
  </div>
</div>
`;

exports[`TooltipContent have correct structure with title and large emoji 1`] = `
<div>
  <div
    class="tooltipContent"
  >
    <span
      class="tooltipContentTitleContainer isEmojiLarge"
    >
      <span
        class="tooltipContentEmoji"
      >
        <span
          aria-label=":smile:"
          class="emoticon"
          data-emoticon="smile"
          style="display: inline-flex; align-items: center; justify-content: center; height: 48px; width: 48px; max-height: 48px; max-width: 48px; min-height: 48px; min-width: 48px; overflow: hidden;"
        >
          <img
            alt=":smile:"
            height="48"
            src="/static/emoji/1f604.png"
            style="object-fit: contain;"
            width="48"
          />
        </span>
      </span>
      <span
        class="tooltipContentTitle"
      >
        Title with Large Emoji
      </span>
    </span>
  </div>
</div>
`;

exports[`TooltipContent have correct structure with title and shortcut 1`] = `
<div>
  <div
    class="tooltipContent"
  >
    <span
      class="tooltipContentTitleContainer"
    >
      <span
        class="tooltipContentTitle"
      >
        Title with Shortcut
      </span>
    </span>
    <span
      class="tooltipContentShortcut"
    >
      <mark
        class="shortcut-key shortcut-key--tooltip"
      >
        Ctrl
      </mark>
      <mark
        class="shortcut-key shortcut-key--tooltip"
      >
        K
      </mark>
    </span>
  </div>
</div>
`;

exports[`TooltipContent have correct structure with title, emoji and hint 1`] = `
<div>
  <div
    class="tooltipContent"
  >
    <span
      class="tooltipContentTitleContainer"
    >
      <span
        class="tooltipContentEmoji"
      >
        <span
          aria-label=":smile:"
          class="emoticon"
          data-emoticon="smile"
          style="display: inline-flex; align-items: center; justify-content: center; height: 28px; width: 28px; max-height: 28px; max-width: 28px; min-height: 28px; min-width: 28px; overflow: hidden;"
        >
          <img
            alt=":smile:"
            height="28"
            src="/static/emoji/1f604.png"
            style="object-fit: contain;"
            width="28"
          />
        </span>
      </span>
      <span
        class="tooltipContentTitle"
      >
        Title with Hint
      </span>
    </span>
    <span
      class="tooltipContentHint"
    >
      This is a hint
    </span>
  </div>
</div>
`;
